--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
   <header>
     <h1>愛犬タイプ別<br>性格診断シート</h1>
-    <p>思い当たる項目すべてにチェックを入れてOKボタンを押してください。<p>
+    <p>思い当たる項目すべてにチェックを入れてOKボタンを押してください。</p>
   </header>
   <main>
     <ul class="query_list">
@@ -56,62 +56,27 @@
     </div>
     <div id="disp">
       <div id="type_0" class="disp">
-        <p>
-          <span class="type_explanation">
-            強い感受性を持ち 表現する
-          </span><br>
-          <span class="type_name">【アーティスト タイプ】</span><br>
-          このタイプの子は、音や匂いなど周りの様子にとても敏感です。
-          敏感すぎるあまりに、ストレスを感じて耐えられなくなり、
-          吠えたり、攻撃的になってしまう事があります。
-          まずは気持ちを落ち着けてあげて下さい。
-          そうすることで言葉もよく理解し、
-          コマンド覚えも とても早いです。
-        </p>
+          <p class="type_explanation">強い感受性を持ち 表現する</p>
+          <p class="type_name">アーティスト タイプ</p>
       </div>
       <div id="type_1" class="disp">
-        <p>
-          <span class="type_explanation">
-            些細なちがいにも気づき<br>自分で考え追及する
-          </span><br>
-          <span class="type_name">【研究者タイプ】</span><br>
-          このタイプの子は、とてもデリケートです。
-          優しく丁寧に接してあげる必要があります。
-          本当に些細な事でも気付き、怖がったりします。
-          しつけをするときにも大きな声や 
-          いきなり難しい事を教えずに、
-          少しずつ進めて上げた方がいいでしょう。
-          一度落ち込むと、立ち直るのにも時間がかかるので、
-          失敗の経験をできるだけ少なくしてあげて下さい。
-        </p>
+          <p class="type_explanation">些細なちがいにも気づき<br>自分で考え追及する</p>
+          <p class="type_name">研究者タイプ</p>
       </div>
       <div id="type_2" class="disp">
-        <p>
-          <span class="type_explanation">
-            明るく前向きで集中力がある
-          </span><br>
-          <span class="type_name">【アスリートタイプ】</span><br>
-          このタイプの子は、とにかく活発でエネルギーが満ち溢れています。
-          自分に自信があり、きつく 叱っても凹んだりするこはなく、
-          逆キレして襲ってくることもあります。
-          興奮しやすいので、運動などでしっかり発散させてあげることが大切です。
-          遊び好きなので一緒にドックスポーツを楽しむのもお勧めです。
-        </p>
+        <p class="type_explanation">明るく前向きで集中力がある</p>
+        <p class="type_name">アスリートタイプ</p>
       </div>
       <div id="type_3" class="disp">
-        <p>
-          <span class="type_explanation">
-            自分が愛されることを信じてる
-          </span><br>
-          <span class="type_name">【アイドルタイプ】</span><br>
-          天真爛漫で、一番飼いやすいタイプかもしれません。
-          気持ちも落ち着いていて目立った問題行動は少ないでしょう。
-          のんびりマイペースなタイプですのでコマンドの理解には時間がかかる事が多いです。
-          あせらず時間をかけてあげてください。
-        </p>
+        <p class="type_explanation">自分が愛されることを信じてる</p>
+        <p class="type_name">アイドルタイプ</p>
       </div>
       <div id="annotation" class="disp">
-        性格は、持って生まれた遺伝的な要素と飼われている状況や、しつけ等の環境によって変わってきます。<br>チェック項目が変われば、タイプが変わる可能性があります。その時は、サイド診断してみて下さい。
+        <p>
+          LINEにてタイプ名を送って下さると、<br class="cancel_br">
+          タイプ別の詳細をお返しします。<br>
+          登録がまだの方は<a href="https://lin.ee/niSWYlu">こちら</a>から。
+        </p>
       </div>
     </div>
     <div class="push"></div>
