--- a/index.html
+++ b/index.html
@@ -73,9 +73,9 @@
       </div>
       <div id="annotation" class="disp">
         <p>
-          LINEにてタイプ名を送って下さると、<br class="cancel_br">
-          タイプ別の詳細をお返しします。<br>
-          登録がまだの方は<a href="https://lin.ee/niSWYlu">こちら</a>から。
+          LINEの方へ診断されたタイプを送って下さい。<br class="cancel_br">
+          タイプ別の詳しい解説、お届けします。<br class="cancel_br">
+          登録まだの方は<a href="https://lin.ee/niSWYlu">こちら</a>から。
         </p>
       </div>
     </div>
