--- a/index.html
+++ b/index.html
@@ -73,8 +73,10 @@
       </div>
       <div id="annotation" class="disp">
         <p>
-          LINEの方へ診断されたタイプを送って下さい。<br class="cancel_br">
-          タイプ別の詳しい解説、お届けします。<br class="cancel_br">
+          LINEの方へ診断されたタイプを送って下さい。<br>
+          タイプ別の詳しい解説、お届けします。<br>
+        </p>
+        <p class="link">
           登録まだの方は<a href="https://lin.ee/niSWYlu">こちら</a>から。
         </p>
       </div>
